--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
     "antd": "^3.12.1",
     "babel-plugin-import": "^1.7.0",
     "less": "^2.7.3",
     "less-vars-to-js": "1.3.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-icons": "^3.11.0",
-    "react-slick": "^0.27.11"
+    "react-dom": "^16.7.0"
   },
   "license": "ISC",
   "devDependencies": {
